Validate spec on serverside and show proper error messages Also actually use the generated interface classes instead of just copying them
